--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-This is the public version of the MPG Calculator in java. Please don't break it too much.
+This is the public version of the MPG Calculator in java.
+Please don't break it too much.
